--- a/src/style/index.css
+++ b/src/style/index.css
@@ -52,7 +52,7 @@ body {
   background-position: center;
 } 
 
-.banner-titulo {
+.banner-introducao {
   position: absolute;
   top: 33%;
   left: 0;
@@ -68,8 +68,28 @@ body {
   background-position: center;
 }
 
-.background-image {
+.banner-cenario {
+  position: absolute;
+  top: 35%;
+  left: 0;
   width: 390px;
+  height: 70px;
+  line-height: 60px;
+  font-size: 20px;
+  text-align: center;
+  color: white;
+  font-family: Bodoni Bd BT;
+  background-image: url('src/assets/banner-titulo.png');
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: center;
+}
+
+.background-image {
+  position: absolute;
+  top: 15%;
+  left: 2.5%;
+  width: 95%;
   height: 200px;
   background-repeat: no-repeat;
   background-size: 100%;
@@ -91,19 +111,25 @@ body {
   border: none;
   font-family: Book Antiqua;
   font-size: 15pt;
-  position: absolute;
-  top: 42%;
-  left: 0;
   width: 390px;
   height: 25%;
   padding: 0 30px 0 30px;
   text-align: justify;
 }
 
-.button {
+.textarea-introducao { 
   position: absolute;
-  top: 85%;
-  left: 5%;
+  top: 42%;
+  left: 0;
+}
+
+.textarea-cenario {
+  position: absolute;
+  top: 44%;
+  left: 0;
+}
+
+.button {
   width: 90%;
   height: 52px;
   line-height: 50px;
@@ -113,7 +139,41 @@ body {
   background-color: transparent;
   border: none;
   font-family: Humnst777 BT;
+}
+
+.button-introducao {
+  position: absolute;
+  top: 85%;
+  left: 5%;
   font-size: 14pt;
+}
+
+.button-escolha-um {
+  position: absolute;
+  top: 63%;
+  left: 5%;
+  font-size: 9pt;
+}
+
+.button-escolha-dois {
+  position: absolute;
+  top: 70%;
+  left: 5%;
+  font-size: 9pt;
+}
+
+.button-escolha-tres {
+  position: absolute;
+  top: 77%;
+  left: 5%;
+  font-size: 9pt;
+}
+
+.button-escolha-quatro {
+  position: absolute;
+  top: 84%;
+  left: 5%;
+  font-size: 9pt;
 }
 
 .select-gender {
