--- a/src/style/index.css
+++ b/src/style/index.css
@@ -86,13 +86,24 @@ body {
 }
 
 .background-image {
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+
+.background-image-cenario {
   position: absolute;
   top: 15%;
   left: 2.5%;
   width: 95%;
   height: 200px;
-  background-repeat: no-repeat;
-  background-size: 100%;
+}
+
+.background-image-progressao {
+  position: absolute;
+  top: 11%;
+  left: 10%;
+  width: 80%;
+  height: 20px;
 }
 
 .logo {
@@ -112,7 +123,7 @@ body {
   font-family: Book Antiqua;
   font-size: 15pt;
   width: 390px;
-  height: 25%;
+  height: 18%;
   padding: 0 30px 0 30px;
   text-align: justify;
 }
