--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,7 @@ body {
 }
 
 .background-image {
+  border: none;
   background-repeat: no-repeat;
   background-size: 100%;
 }
@@ -108,10 +109,11 @@ body {
 
 .logo {
   position: absolute;
-  top: 10%;
+  top: 6%;
   left: 20%;
   width: 50%;
-  height: 23%;
+  height: 27%;
+  border: none;
   background-repeat: no-repeat;
   background-size: 100%;
 }
